//
//  ShotFeedSDKWrapper.swift
//  BaseketballShot
//
//  Created by Sourabh Sharotri on 06/08/25.
//

class ShotFeedSDKWrapper {
    func startListening(completion: @escaping (ShotModel) -> Void) {
        // SDK event listener mock
    }
    
    func fetchHistoricalShots(gameId: String, completion: @escaping ([ShotModel]) -> Void) {
        // API call mock
    }
}
