//
//  GameStateViewModel.swift
//  BaseketballShot
//
//  Created by Sourabh Sharotri on 06/08/25.
//

import Foundation

class GameStateViewModel: ObservableObject {
}
