@startuml
package "Views" {
    class CourtScene
    class ShotChartView
    class PlayerListView
    class ShotAnimator
    class CameraManager

    CourtScene --> ShotAnimator
    CourtScene --> CameraManager
}

package "ViewModels" {
    class CameraControlViewModel
    class GameStateViewModel
    class ShotChartViewModel
    class PlayerViewModel

    CameraControlViewModel --> CourtScene
    GameStateViewModel --> CourtScene
    ShotChartViewModel --> ShotChartView
    PlayerViewModel --> PlayerListView
}

package "Models" {
    class DBModel
    class CourtModel
    class ShotModel
    class PlayerModel

    CourtModel --> ShotModel
    PlayerModel --> ShotModel
    ShotModel --> CourtModel
}

package "Services" {
    class CoreDataService
    class LiveShotService
    class ShotDataService
    class ShotBuffer
    class ShotFeedSDKWrapper

    CoreDataService --> LiveShotService
    CoreDataService --> ShotDataService

    LiveShotService --> ShotBuffer
    LiveShotService --> ShotFeedSDKWrapper
}

package "Network" {
    class APIEndpoints
    class NetworkManager

    APIEndpoints --> NetworkManager
}
@enduml
